Remove deprecated garbage collector